# Diffguard

./: .gitignore  AGENDS.md  AGENT.md  AGENTS.md  ARCHITECTURE_TARGET.md  BACKEND_GUIDE.md  CLAUDE.md  CONTRIBUTING.md  JAVA.md  LICENSE  MIGRATION_PLAN.md  ORCHESTRATOR_CONTRACT.md  ORCHESTRATOR_DTO_SCHEMA_ALIGNMENT.md  PROGRESS.md  PYTHON.md  RAG_RESULT_SESSION_EVALUATION.md  README.md  README.zh-CN.md  README_EN.md  REFACTOR_ACCEPTANCE_ROUND1.md  REFACTOR_ACCEPTANCE_ROUND2.md  RELEASING.md  action.yml  docker-compose.yml  project_analysis.md
services/agent/: .coverage  .env.example  Dockerfile  coverage.xml  pyproject.toml  requirements-github-action.txt
services/agent/app/: __init__.py  config.py  github_action_runner.py  github_api.py  main.py
services/agent/app/agent/: __init__.py  base.py  diff_parser.py  false_positive_filter.py  llm_utils.py  multi_agent_orchestrator.py  pipeline_orchestrator.py  (+3 more)
services/agent/config/: false_positive_rules.yaml
services/agent/diffguard/: config.py  context_ingest.py  main.py
services/agent/scripts/: e2e_review.ps1
services/agent/tests/: __init__.py  conftest.py  test_agent_base.py  test_agent_builtin_agents.py  test_agent_llm_utils.py  test_agent_memory.py  test_agent_multi_agent_orchestrator.py  test_agent_pipeline_orchestrator.py  test_agent_registry.py  test_agent_strategy_planner.py  test_diff_parser.py  test_false_positive_filter.py  test_github_action_runner.py  test_models_schemas.py  test_p0_fixes.py  test_pipeline_stages.py  test_token_usage_tracker.py  test_tools_definitions.py  test_tools_tool_client.py
(+668 files in other folders)
